# JetsonNano

./: .gitignore  CMakeLists.txt  camera_check.py
data/: READ.me
docs/: READ.me
include/: READ.me
logs/: READ.me
scripts/: READ.me
src/: READ.me  camera_module.cpp
src/vision/: yolo11_live.py  yolo_live.py
test/: READ.me
tests/: READ.me
